# SolEngine

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  program
assets/shaders/: default.vert
include/: color.h  component.h  entity.h  framebuffer.h  gameobject.h  geometry.h  glshader.h  mat4.h  matrix4.h  mesh.h  quaternion.h  scene.h  scenemanager.h  texture2d.h  transform.h  vec3.h  window.h
include/core/: application.h  assets.h  component.h  componentallocator.hpp  delegate.hpp  gameobject.h  gameobject.hpp  gameobjectstorage.h  gameobjectwarehouse.h  glshader.h  input.h  quaternion.h  resourceloader.hpp  scene.h  scenemanager.h  scriptableobject.h  sparseset.hpp  sprite.h  testscene.h  texture2d.h  timer.h  transform.h  vector3.h  window.h
shaders/: default.frag  default.vert
src/: application.cpp  componentallocator.cpp  entity.cpp  framebuffer.cpp  gameobject.cpp  gameobjectstorage.cpp  gameobjectwarehouse.cpp  geometry.cpp  glshader.cpp  input.cpp  main.cpp  mat4.cpp  matrix4.cpp  mesh.cpp  quaternion.cpp  scene.cpp  scenemanager.cpp  scriptableobject.cpp  sprite.cpp  texture2d.cpp  timer.cpp  transform.cpp  vec3.cpp  vector3.cpp  window.cpp
